cmake_minimum_required(VERSION 2.8)
set(ProjName modelinfo)
project(${ProjName})
set(CMAKE_CXX_STANDARD 11)

find_package(Caffe)
if(Caffe_LIBRARIES)
    include_directories(${pybind11_INCLUDE_DIR} ${PYTHON_INCLUDE_DIRS})
    include_directories(${Caffe_INCLUDE_DIRS})
    add_executable(export src/export.cpp src/modelinfo.cpp)
    target_link_libraries(export ${Caffe_LIBRARIES})
else()
    message(STATUS "caffe not found")
endif()

find_package(pybind11)
if (pybind11_FOUND)
    set(CMAKE_MODULE_PATH "${pybind11_DIR};${CMAKE_MODULE_PATH}")
    find_package(PythonLibsNew REQUIRED)
    add_definitions(-DCPU_ONLY)
    add_definitions(-DUSE_ACCELERATE)
    pybind11_add_module(modelinfo src/pybind.cpp src/modelinfo.cpp)
    target_link_libraries(modelinfo ${Caffe_LIBRARIES})
endif()